--- a/package.json
+++ b/package.json
@@ -45,8 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080",
-  "devServer": {
-    "disableHostCheck": true
-  }
+  "proxy": "http://localhost:8080"
 }
